# Millow

./: .gitignore  README.md  fix-signing.sh  package-lock.json  package.json
src/: App.css  App.tsx  App.tsx.new
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commander.rs  config.rs  lib.rs  main.rs  transcriber.rs  typer.rs  wakeword.rs
